// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FixedWidthButtonPillContent /> snapshot should match snapshot 1`] = `
<FixedWidthButtonPillContent
  stringContentVariations={
    Array [
      "long",
      "longer",
      "longest",
    ]
  }
>
  <div
    className="md-fixed-width-button-pill-content-wrapper"
  >
    <div
      className="md-fixed-width-button-pill-content-button-content"
      data-hidden={true}
      data-size={40}
      key="long"
    >
      <Text
        type="subheader-primary"
      >
        <h3
          className="md-text-wrapper"
          data-type="subheader-primary"
        >
          long
        </h3>
      </Text>
    </div>
    <div
      className="md-fixed-width-button-pill-content-button-content"
      data-hidden={true}
      data-size={40}
      key="longer"
    >
      <Text
        type="subheader-primary"
      >
        <h3
          className="md-text-wrapper"
          data-type="subheader-primary"
        >
          longer
        </h3>
      </Text>
    </div>
    <div
      className="md-fixed-width-button-pill-content-button-content"
      data-hidden={true}
      data-size={40}
      key="longest"
    >
      <Text
        type="subheader-primary"
      >
        <h3
          className="md-text-wrapper"
          data-type="subheader-primary"
        >
          longest
        </h3>
      </Text>
    </div>
    <div
      className="md-fixed-width-button-pill-content-button-content"
      data-hidden={false}
      data-size={40}
    >
      <Icon
        name="placeholder"
        scale={20}
      />
      <Text>
        <p
          className="md-text-wrapper"
          data-type="body-primary"
        >
          Example
        </p>
      </Text>
    </div>
  </div>
</FixedWidthButtonPillContent>
`;

exports[`<FixedWidthButtonPillContent /> snapshot should match snapshot with buttonPillSize 1`] = `
<FixedWidthButtonPillContent
  buttonPillSize={24}
  stringContentVariations={
    Array [
      "long",
      "longer",
      "longest",
    ]
  }
>
  <div
    className="md-fixed-width-button-pill-content-wrapper"
  >
    <div
      className="md-fixed-width-button-pill-content-button-content"
      data-hidden={true}
      data-size={24}
      key="long"
    >
      <Text
        type="body-compact"
      >
        <small
          className="md-text-wrapper"
          data-type="body-compact"
        >
          long
        </small>
      </Text>
    </div>
    <div
      className="md-fixed-width-button-pill-content-button-content"
      data-hidden={true}
      data-size={24}
      key="longer"
    >
      <Text
        type="body-compact"
      >
        <small
          className="md-text-wrapper"
          data-type="body-compact"
        >
          longer
        </small>
      </Text>
    </div>
    <div
      className="md-fixed-width-button-pill-content-button-content"
      data-hidden={true}
      data-size={24}
      key="longest"
    >
      <Text
        type="body-compact"
      >
        <small
          className="md-text-wrapper"
          data-type="body-compact"
        >
          longest
        </small>
      </Text>
    </div>
    <div
      className="md-fixed-width-button-pill-content-button-content"
      data-hidden={false}
      data-size={24}
    >
      <Icon
        name="placeholder"
        scale={20}
      />
      <Text>
        <p
          className="md-text-wrapper"
          data-type="body-primary"
        >
          Example
        </p>
      </Text>
    </div>
  </div>
</FixedWidthButtonPillContent>
`;

exports[`<FixedWidthButtonPillContent /> snapshot should match snapshot with className 1`] = `
<FixedWidthButtonPillContent
  className="example-class"
  stringContentVariations={
    Array [
      "long",
      "longer",
      "longest",
    ]
  }
>
  <div
    className="md-fixed-width-button-pill-content-wrapper"
  >
    <div
      className="md-fixed-width-button-pill-content-button-content"
      data-hidden={true}
      data-size={40}
      key="long"
    >
      <Text
        type="subheader-primary"
      >
        <h3
          className="md-text-wrapper"
          data-type="subheader-primary"
        >
          long
        </h3>
      </Text>
    </div>
    <div
      className="md-fixed-width-button-pill-content-button-content"
      data-hidden={true}
      data-size={40}
      key="longer"
    >
      <Text
        type="subheader-primary"
      >
        <h3
          className="md-text-wrapper"
          data-type="subheader-primary"
        >
          longer
        </h3>
      </Text>
    </div>
    <div
      className="md-fixed-width-button-pill-content-button-content"
      data-hidden={true}
      data-size={40}
      key="longest"
    >
      <Text
        type="subheader-primary"
      >
        <h3
          className="md-text-wrapper"
          data-type="subheader-primary"
        >
          longest
        </h3>
      </Text>
    </div>
    <div
      className="example-class md-fixed-width-button-pill-content-button-content"
      data-hidden={false}
      data-size={40}
    >
      <Icon
        name="placeholder"
        scale={20}
      />
      <Text>
        <p
          className="md-text-wrapper"
          data-type="body-primary"
        >
          Example
        </p>
      </Text>
    </div>
  </div>
</FixedWidthButtonPillContent>
`;

exports[`<FixedWidthButtonPillContent /> snapshot should match snapshot with icon 1`] = `
<FixedWidthButtonPillContent
  icon={true}
  stringContentVariations={
    Array [
      "long",
      "longer",
      "longest",
    ]
  }
>
  <div
    className="md-fixed-width-button-pill-content-wrapper"
  >
    <div
      className="md-fixed-width-button-pill-content-button-content"
      data-hidden={true}
      data-size={40}
      key="long"
    >
      <Icon
        name="placeholder"
        scale={32}
      />
      <Text
        type="subheader-primary"
      >
        <h3
          className="md-text-wrapper"
          data-type="subheader-primary"
        >
          long
        </h3>
      </Text>
    </div>
    <div
      className="md-fixed-width-button-pill-content-button-content"
      data-hidden={true}
      data-size={40}
      key="longer"
    >
      <Icon
        name="placeholder"
        scale={32}
      />
      <Text
        type="subheader-primary"
      >
        <h3
          className="md-text-wrapper"
          data-type="subheader-primary"
        >
          longer
        </h3>
      </Text>
    </div>
    <div
      className="md-fixed-width-button-pill-content-button-content"
      data-hidden={true}
      data-size={40}
      key="longest"
    >
      <Icon
        name="placeholder"
        scale={32}
      />
      <Text
        type="subheader-primary"
      >
        <h3
          className="md-text-wrapper"
          data-type="subheader-primary"
        >
          longest
        </h3>
      </Text>
    </div>
    <div
      className="md-fixed-width-button-pill-content-button-content"
      data-hidden={false}
      data-size={40}
    >
      <Icon
        name="placeholder"
        scale={20}
      />
      <Text>
        <p
          className="md-text-wrapper"
          data-type="body-primary"
        >
          Example
        </p>
      </Text>
    </div>
  </div>
</FixedWidthButtonPillContent>
`;

exports[`<FixedWidthButtonPillContent /> snapshot should match snapshot with icon and iconScale 1`] = `
<FixedWidthButtonPillContent
  icon={true}
  iconScale={16}
  stringContentVariations={
    Array [
      "long",
      "longer",
      "longest",
    ]
  }
>
  <div
    className="md-fixed-width-button-pill-content-wrapper"
  >
    <div
      className="md-fixed-width-button-pill-content-button-content"
      data-hidden={true}
      data-size={40}
      key="long"
    >
      <Icon
        name="placeholder"
        scale={16}
      />
      <Text
        type="subheader-primary"
      >
        <h3
          className="md-text-wrapper"
          data-type="subheader-primary"
        >
          long
        </h3>
      </Text>
    </div>
    <div
      className="md-fixed-width-button-pill-content-button-content"
      data-hidden={true}
      data-size={40}
      key="longer"
    >
      <Icon
        name="placeholder"
        scale={16}
      />
      <Text
        type="subheader-primary"
      >
        <h3
          className="md-text-wrapper"
          data-type="subheader-primary"
        >
          longer
        </h3>
      </Text>
    </div>
    <div
      className="md-fixed-width-button-pill-content-button-content"
      data-hidden={true}
      data-size={40}
      key="longest"
    >
      <Icon
        name="placeholder"
        scale={16}
      />
      <Text
        type="subheader-primary"
      >
        <h3
          className="md-text-wrapper"
          data-type="subheader-primary"
        >
          longest
        </h3>
      </Text>
    </div>
    <div
      className="md-fixed-width-button-pill-content-button-content"
      data-hidden={false}
      data-size={40}
    >
      <Icon
        name="placeholder"
        scale={20}
      />
      <Text>
        <p
          className="md-text-wrapper"
          data-type="body-primary"
        >
          Example
        </p>
      </Text>
    </div>
  </div>
</FixedWidthButtonPillContent>
`;

exports[`<FixedWidthButtonPillContent /> snapshot should match snapshot with iconScale 1`] = `
<FixedWidthButtonPillContent
  iconScale={16}
  stringContentVariations={
    Array [
      "long",
      "longer",
      "longest",
    ]
  }
>
  <div
    className="md-fixed-width-button-pill-content-wrapper"
  >
    <div
      className="md-fixed-width-button-pill-content-button-content"
      data-hidden={true}
      data-size={40}
      key="long"
    >
      <Text
        type="subheader-primary"
      >
        <h3
          className="md-text-wrapper"
          data-type="subheader-primary"
        >
          long
        </h3>
      </Text>
    </div>
    <div
      className="md-fixed-width-button-pill-content-button-content"
      data-hidden={true}
      data-size={40}
      key="longer"
    >
      <Text
        type="subheader-primary"
      >
        <h3
          className="md-text-wrapper"
          data-type="subheader-primary"
        >
          longer
        </h3>
      </Text>
    </div>
    <div
      className="md-fixed-width-button-pill-content-button-content"
      data-hidden={true}
      data-size={40}
      key="longest"
    >
      <Text
        type="subheader-primary"
      >
        <h3
          className="md-text-wrapper"
          data-type="subheader-primary"
        >
          longest
        </h3>
      </Text>
    </div>
    <div
      className="md-fixed-width-button-pill-content-button-content"
      data-hidden={false}
      data-size={40}
    >
      <Icon
        name="placeholder"
        scale={20}
      />
      <Text>
        <p
          className="md-text-wrapper"
          data-type="body-primary"
        >
          Example
        </p>
      </Text>
    </div>
  </div>
</FixedWidthButtonPillContent>
`;

exports[`<FixedWidthButtonPillContent /> snapshot should match snapshot with stringContentVariations 1`] = `
<FixedWidthButtonPillContent
  stringContentVariations={
    Array [
      "test",
      "testing",
    ]
  }
>
  <div
    className="md-fixed-width-button-pill-content-wrapper"
  >
    <div
      className="md-fixed-width-button-pill-content-button-content"
      data-hidden={true}
      data-size={40}
      key="test"
    >
      <Text
        type="subheader-primary"
      >
        <h3
          className="md-text-wrapper"
          data-type="subheader-primary"
        >
          test
        </h3>
      </Text>
    </div>
    <div
      className="md-fixed-width-button-pill-content-button-content"
      data-hidden={true}
      data-size={40}
      key="testing"
    >
      <Text
        type="subheader-primary"
      >
        <h3
          className="md-text-wrapper"
          data-type="subheader-primary"
        >
          testing
        </h3>
      </Text>
    </div>
    <div
      className="md-fixed-width-button-pill-content-button-content"
      data-hidden={false}
      data-size={40}
    >
      <Icon
        name="placeholder"
        scale={20}
      />
      <Text>
        <p
          className="md-text-wrapper"
          data-type="body-primary"
        >
          Example
        </p>
      </Text>
    </div>
  </div>
</FixedWidthButtonPillContent>
`;
